--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
   --white: #FFFFFF;
   --hard-white:#EEEEEE;
   --blue: #2196F3;
+  --hard-bule: #188CE8;
   --black: #212121;
   --gray: #757575;
   --hard-gray:#2F303A;
   --light-gray:#F5F4FA;
+  --lite-gray:#ECECEC;
 }
 
 
@@ -64,9 +66,13 @@ button{
   border: none;
 }
 
-.about_nav{
-
-}
+.header_container_portfolio{
+  
+  border-bottom:  1px solid var(--lite-gray);
+  display: flex;
+  
+  background: var(--white);
+  }
 
 
 .logo_link{
@@ -201,29 +207,38 @@ padding-bottom: 32px;
 /*----------------------------------------*/
 
 /*Section*/
-
-.portfolio_section{
+.container_portfolio_section{
   width: 1206px;
   padding-right: 15px;
   padding-left: 15px;
-  margin-top: 94px;
-  margin-bottom: 94px;
-
   margin-right: auto;
   margin-left: auto;
+
+}
+
+.portfolio_section{
+  width: 1890px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+
 }
 /*cayboard*/
 
 .keyboard{
 display: flex;
+justify-content: center;
+gap: 8px;
+margin-bottom: 50px;
 }
 
 .about_all{
   padding: 6px 25px 6px 25px;
-  margin: 94px 8px 50px 297px;
+  
   
 
-  width: 73px;
+  
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -236,14 +251,15 @@ cursor: pointer;
 color: var(--black);
 background: var(--light-gray);
 border-radius: 4px;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .about_web_site{
   padding: 6px 22px 6px 22px;
-  margin: 94px 8px 50px 8px;
+  
 
 
-  width: 125px;
+  
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -255,14 +271,15 @@ cursor: pointer;
 color: var(--black);
 background: var(--light-gray);
 border-radius: 4px;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .about_applications{
   padding: 6px 22px 6px 22px;
-  margin: 94px 8px 50px 8px;
+  
 
 
-    width: 112px;
+    
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -274,13 +291,14 @@ cursor: pointer;
 color: var(--black);
 background: var(--light-gray);
 border-radius: 4px;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .about_design{
   padding: 6px 22px 6px 22px;
-  margin: 94px 8px 50px 8px;
+  
 
-    width: 103px;
+    ;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -292,13 +310,14 @@ cursor: pointer;
 color: var(--black);
 background: var(--light-gray);
 border-radius: 4px;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .about_marketing{
   padding: 6px 22px 6px 22px;
-  margin:94px 298px  50px 8px ;
+  
 
-  width: 130px;
+  
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -310,6 +329,7 @@ cursor: pointer;
 color: var(--black);
 background: var(--light-gray);
 border-radius: 4px;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*------------------------------------------------------*/
@@ -323,14 +343,19 @@ border-radius: 4px;
 
 .portfolio_item{
   flex-basis: calc((100% - 30px * 2 ) / 3);
-  padding-bottom: 20px;
+  
   background: var(--white);
-  border: 1px solid var(--hard-white);
+  
   
 }
 
 
-
+.padding_item{
+  margin-bottom: 4px;
+  border-left:1px solid var(--hard-white) ;
+  border-bottom:1px solid var(--hard-white) ;
+  border-right:1px solid var(--hard-white) ;
+}
 
 
 
@@ -423,8 +448,16 @@ display: flex;
  
 
 
+/*bg*/
 
 
+.container_bg{
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
  .bg{
   
@@ -453,7 +486,7 @@ margin-right: auto;
  }
  
  .index_btn{
-
+display: block;
 margin-top: 30px;
 
 margin-left: auto;
@@ -481,12 +514,8 @@ padding: 10px 32px 10px 32px;
  }
  
  .index_about_hav{
-  width: 1170px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-top: 94px;
-  margin-right: auto;
-  margin-left: auto;
+  
+ padding-top: 94px;
 
  
  }
@@ -506,6 +535,7 @@ padding: 10px 32px 10px 32px;
 
  .index_abour_uss{
   display: flex;
+  gap: 30px;
  }
 
 
@@ -517,7 +547,7 @@ padding: 10px 32px 10px 32px;
  .index_details_one{
   width: 270px;
 
-margin-right: 30px;
+
 margin-bottom: 10px;
 margin-top: auto;
 margin-left: auto;
@@ -537,12 +567,10 @@ text-align: center;
  .index_description_one{
   width: 270px;
 
-margin-right: 30px;
-margin-top: 10px;
-margin-left: auto;
-margin-bottom: auto;
+
+
 align-items: center;
-text-align: center;
+text-align: left;
 
    font-weight: 400;
  font-size: 14px;
@@ -584,7 +612,7 @@ margin-right: 30px;
 margin-bottom: 24px;
 margin-left: 30px;
 align-items: center;
-text-align: center;
+text-align: left;
 
   font-weight: 400;
   font-size: 14px;
@@ -623,7 +651,7 @@ text-align: center;
   margin-bottom: 10px;
   margin-left: 30px;
   align-items: center;
-text-align: center;
+text-align: left;
 
 
   font-weight: 400;
@@ -665,7 +693,7 @@ text-align: center;
   margin-bottom: 10px;
   margin-left: 30px;
   align-items: center;
-text-align: center;
+text-align: left;
 
   font-weight: 400;
   font-size: 14px;
@@ -680,27 +708,38 @@ text-align: center;
 /*----------------------*/
 
 /*images*/
-.index_about_work{
-  width: 1170px;
+.container_images{
+  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
-  margin-top: 94px;
   margin-right: auto;
   margin-left: auto;
- }
+}
+
+.index_about_work{
+  width: 1170px;
+padding-top: 94px;
+padding-bottom: 94px;
+padding-right: 15px;
+padding-left: 15px;
+
+margin-bottom: 94px;
+margin-right: auto;
+margin-left: auto; 
+}
 
  .index_hav_one{
 
 text-align: center;
 
-margin-top: 94px;
+
 margin-bottom: 50px;
     
       font-weight: 700;
           letter-spacing: 0.03em;
            
       font-size: 36px;
-   line-height:2.6;
+   line-height:1.6;
    
       color: var(--black);
    }
@@ -708,19 +747,10 @@ margin-bottom: 50px;
 
 .index_images{
   display: flex;
+  gap: 30px;
 }
 
-.index_img_computer{
-  margin: 50px 30px 0px 0px;
-}
 
-.index_img_phone{
-margin: 50px 30px 0px 30px;
-}
-
-.index_img_notebook{
-  margin: 50px 0px 0px 30px;
-}
 
 /*---------------*/
 
@@ -728,9 +758,9 @@ margin: 50px 30px 0px 30px;
 /*Наша команда*/
 .index_team{
   
-  margin-top: 94px;
-  padding-top: 90px;
-  padding-bottom: 90px;
+
+  padding-top: 94px;
+  padding-bottom: 94px;
   background: var(--light-gray);}
 
 
@@ -741,32 +771,36 @@ margin: 50px 30px 0px 30px;
     font-weight: 700;
     letter-spacing: 0.03em;
    font-size: 36px;
-  line-height:2.6;
+  line-height:42.19px;
   text-align: center;
       color: var(--black);
   }
-  .div_index_team{
-      
+
+  .container_team{
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
   }
+ 
 
   .index_my_team{
     display: flex;
+    gap: 30px;
   }
 
 
 
-
+/*IGOR*/
  .index_backgound_white_igor{
-  margin-top: 50px;
-  margin-right: 30px;
-  margin-bottom: 94px;
-  margin-left:215px;  
+    margin-top: 50px;
   background: var(--white);
 }
 
 .index_name_igor{
 
-  margin: 30px 70px 10px 70px;
+  margin-bottom: 10px;
   letter-spacing: 0.03em;
  
   font-weight: 500;
@@ -777,7 +811,7 @@ color: var(--black);
 }
 
 .index_responsibilities_igor{
-  margin: 10px 70px 30px 70px;
+  
   letter-spacing: 0.03em;
  
   font-weight: 400;
@@ -787,15 +821,16 @@ text-align: center;
 
 color: var(--gray);
 }
+/*-----------------------------*/
 
-
+/*OLGA*/
 .index_backgound_white_olga{
-  margin: 50px 30px 94px 30px;
+  margin-top: 50px;
   background: var(--white);
 }
 
 .index_name_olga{
-  margin: 30px 80px 10px 80px;
+  margin-bottom: 10px;
   letter-spacing: 0.03em;
  
   font-weight: 500;
@@ -807,7 +842,7 @@ color: var(--black);
 
 
 .index_responsibilities_olga{
-  margin: 10px 60px 30px 60px;
+  
   letter-spacing: 0.03em;
  
   font-weight: 400;
@@ -817,15 +852,17 @@ text-align: center;
 
 color: var(--gray);
 }
+/*----------------------------------------*/
 
+/*MIKOLA*/
 .index_backgound_white_mikola{
-  margin: 50px 30px 94px 30px;
+  margin-top: 50px;
   background: var(--white);
 }
 
 
 .index_name_mikola{
-  margin: 30px 70px 10px 70px;
+  margin-bottom: 10px;
   letter-spacing: 0.03em;
  
   font-weight: 500;
@@ -836,7 +873,7 @@ color: var(--black);
 }
 
 .index_responsibilities_mikola{
-margin: 10px 97px 30px 97px ;
+
 letter-spacing: 0.03em;
  
 font-weight: 400;
@@ -846,14 +883,16 @@ text-align: center;
 
 color: var(--gray);
 }
+/*-------------------------------------------*/
 
+/*MIHAYLO*/
 .index_backgound_white_mihaylo{
-  margin: 50px 215px 94px 30px;
+  margin-top: 50px;
   background-color: var(--white);
 }
 
 .index_name_mihaylo{
-margin: 30px 62px 10px 62px;
+margin-bottom: 10px; 
 font-weight: 500;
 font-size: 16px;
 line-height:1.18;
@@ -862,7 +901,7 @@ color: var(--black);
 }
 
 .index_responsibilities_mihaylo{
-  margin: 10px 91px 30px 92px ;
+  
   letter-spacing: 0.03em;
  
   font-weight: 400;
@@ -873,18 +912,25 @@ text-align: center;
 color: var(--gray);
 }
  
-/*-----------------------*/
+/*------------------------------------------*/
 
  
 
  
  /*Footer*/
+ .container_footer_div{
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+ }
 
  .footer_container{
   
 
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 60px;
    
    
    
@@ -907,7 +953,7 @@ color: var(--gray);
     margin-top: 60px;
     margin-right: auto;
     margin-bottom: 20px;
-    margin-left: 215px;
+   
 
 
   font-family: 'Raleway',sans-serif;
@@ -919,7 +965,9 @@ color: var(--gray);
   }
 
  
-
+.index_ul_adres{
+  margin-top: 20px;
+}
  
  
    .tell_about{
@@ -946,10 +994,9 @@ color: var(--gray);
  
        .info_adres{
 
-      margin-top: 20px;
-      margin-right: auto;
+     
       margin-bottom: 9px;
-        margin-left: 215px;
+        
          letter-spacing: 0.03em;
  
          font-weight: 400;
@@ -967,10 +1014,9 @@ color: var(--gray);
                
 
                 .main_about_footer{
-                  margin-top: 9px;
-                  margin-right: auto;
+                 
                   margin-bottom: 9px;
-                  margin-left: 215px;
+                  
 
                   letter-spacing: 0.03em;
  
@@ -985,9 +1031,7 @@ color: var(--gray);
                 .tell_about_footer{
 
                   margin-top: 9px;
-                  margin-right: auto;
-                  margin-bottom: 60px;
-                  margin-left: 215px;
+                  
 
                   letter-spacing: 0.03em;
  
@@ -1005,6 +1049,7 @@ color: var(--gray);
 .index_btn:hover, .index_btn:focus{
   background-color: var(--blue);
   color: var(--white);
+  background-color: var(--hard-bule);
 }
 
 
@@ -1044,6 +1089,7 @@ color: var(--blue);
 border-color: var(--black);
 background-color: var(--blue) ;
 color: var(--white);
+
 
 }
 .about_web_site:hover, .about_web_site:focus{
