--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,7 @@ margin-bottom: 10px;
 margin-top: auto;
 margin-left: auto;
 align-items: center;
-text-align: center;
+text-align: left;
  
    font-weight: 700;
  font-size: 14px;
@@ -606,7 +606,7 @@ margin-right: 30px;
 margin-bottom: 10px;
 margin-left: 30px;
 align-items: center;
-text-align: center;
+text-align: left;
 
 
   font-weight: 700;
@@ -647,7 +647,7 @@ margin-top: auto;
   margin-bottom: 10px;
   margin-left: 30px;
   align-items: center;
-text-align: center;
+text-align: left;
 
   font-weight: 700;
   font-size: 14px;
@@ -687,7 +687,7 @@ text-align: left;
   margin-bottom: 10px;
   margin-left: 30px;
   align-items: center;
-text-align: center;
+text-align: left;
 
 
 
