--- a/css/style.css
+++ b/css/style.css
@@ -831,8 +831,8 @@ margin-bottom: 50px;
 }
 
 .index_name_igor{
-  padding: 10px;
-
+ 
+padding: 10px;
  
   letter-spacing: 0.03em;
  
@@ -1004,12 +1004,13 @@ color: var(--gray);
  
  
    .tell_about{
-     letter-spacing: 0.03em;
- 
-     font-weight: 400;
- 
-     font-size: 14px;
-     line-height:2;
+    font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+
+
+letter-spacing: 0.03em;;
      
      color: rgba(255, 255, 255, 0.6);
      }
@@ -1030,12 +1031,13 @@ color: var(--gray);
      
       margin-bottom: 9px;
         
-         letter-spacing: 0.03em;
- 
-         font-weight: 400;
- 
-         font-size: 14px;
-         line-height:2;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
+     
+      
+      letter-spacing: 0.03em;
          
          color: var(--white);
          }
@@ -1051,12 +1053,13 @@ color: var(--gray);
                   margin-bottom: 9px;
                   
 
-                  letter-spacing: 0.03em;
- 
+                  font-style: normal;
                   font-weight: 400;
-            
                   font-size: 14px;
-                  line-height: 2;
+                  line-height: 24px;
+                  
+                  
+                  letter-spacing: 0.03em;
                   
                   color: rgba(255, 255, 255, 0.6);
                 }
