--- a/css/style.css
+++ b/css/style.css
@@ -103,17 +103,10 @@ color: var(--black);
  color: var(--blue);
  letter-spacing: 0.03em;
  }
- /*studi*/
- .about_studi{
-  
+ 
 
 
-
-
-
- }
-
- .about_studi_index{
+ .navigation{
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -126,48 +119,18 @@ color: var(--black);
   color: var(--black);
   letter-spacing: 0.02em;
  }
- /*portfolio*/
- .about_portfolio{
-
  
- margin: 0px 0px 0px 50px;
-
+ .about_navigation{
+  margin: 0px 0px 0px 50px;
 
  }
  
- .about_portfolio_index{
-  display: inline-block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height:1.14;
-  
-  color: var(--black);
-  letter-spacing: 0.02em;
- }
- /*contacts*/
- .about_contact{
-
  
-margin: 0px 0px 0px 50px;
  
 
- }
-
- .about_contact_index{
-  display: inline-block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height:1.14;
-  
-  color: var(--black);
-  letter-spacing: 0.02em;
- }
+ 
  /*mail*/
- .about_mail{
+ .nav_mail_tel{
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -175,9 +138,9 @@ margin: 0px 0px 0px 50px;
  }
 
 
-.index_header_mail{
+.nav_contacts{
  
-  
+  margin: 0px 0px 0px 50px;
  
  
    font-weight: 500;
@@ -189,28 +152,17 @@ margin: 0px 0px 0px 50px;
  letter-spacing: 0.02em;
 }
 
- /*tell*/
- .about_tell{
-  display: inline-block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--gray);
+.icon_nav{
 
- }
-
- .index_header_tell{
-
- 
-  margin: 0px 0px 0px 50px;
- 
-   font-weight: 500;
-   font-size:14px;;
-   line-height:1.14;
+  float: left;
+   width: 16px;
+   height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
   
-   
-   
-   letter-spacing: 0.02em;
- }
+  }
+
+
 /*----------------------------------------*/
 
 /*Section*/
@@ -238,12 +190,10 @@ gap: 8px;
 margin-bottom: 50px;
 }
 
-.about_all{
+.about_button{
   padding: 6px 25px 6px 25px;
-  
-  
 
-  
+
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -259,79 +209,7 @@ border-radius: 4px;
 
 }
 
-.about_web_site{
-  padding: 6px 22px 6px 22px;
-  
 
-
-  
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-line-height:1.6;
-text-align: center;
-
-cursor: pointer;
-color: var(--black);
-background: var(--light-gray);
-border-radius: 4px;
-}
-
-.about_applications{
-  padding: 6px 22px 6px 22px;
-  
-
-
-    
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-line-height:1.6;
-text-align: center;
-
-cursor: pointer;
-color: var(--black);
-background: var(--light-gray);
-border-radius: 4px;
-}
-
-.about_design{
-  padding: 6px 22px 6px 22px;
-  
-
-    ;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-line-height:1.6;
-text-align: center;
-
-cursor: pointer;
-color: var(--black);
-background: var(--light-gray);
-border-radius: 4px;
-}
-
-.about_marketing{
-  padding: 6px 22px 6px 22px;
-  
-
-  
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-line-height:1.6;
-text-align: center;
-
-cursor: pointer;
-color: var(--black);
-background: var(--light-gray);
-border-radius: 4px;
-}
 
 /*------------------------------------------------------*/
 
@@ -487,15 +365,24 @@ display: flex;
   margin-left: auto;
 }
 
- .bg{
-  
+.bg{
+  background: var(--hard-gray);
+  max-width: 1600px;
+  height: 600px;
+
+  margin-left: auto;
+  margin-right: auto;
+
   padding-top: 200px;
   padding-bottom: 200px;
   
- 
+ background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay.jpg);             
+ background-position:center;
+ background-repeat: no-repeat;
+ background-size: cover;
 
-   background: var(--hard-gray);
  }
+
  
  .index_bisnes{
   width: 696px;
@@ -544,6 +431,11 @@ padding: 10px 32px 10px 32px;
 
 
 /*НАШІ ОСОБЛИВОСТІ*/ 
+
+.index_about_us_li{
+  width: 270px;
+}
+
  .index_about_hav{
   
  padding-top: 94px;
@@ -570,172 +462,46 @@ padding: 10px 32px 10px 32px;
  }
 
 
- 
-
- 
-
- /*Увага до деталей*/
- .index_details_one{
+.rectangle{
   width: 270px;
+  margin-bottom: 30px;
+ gap: 30px;
+  background: var(--light-gray);
+border-radius: 4px;
+
+}
 
 
-margin-bottom: 10px;
-margin-top: auto;
-margin-left: auto;
-align-items: center;
-text-align: left;
- 
-   font-weight: 700;
- font-size: 14px;
- line-height: 16px;
- letter-spacing: 0.03em;
- 
- text-transform: uppercase;
- color: var(--black);
- 
+
+
+
+ .index_details{
+  margin-bottom: 10px;
+  font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: var(--black);
  }
- 
- .index_description_one{
-  width: 270px;
+
+ .index_description{
+  
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
 
 
+letter-spacing: 0.03em;
 
-align-items: center;
-text-align: left;
-
-   font-weight: 400;
- font-size: 14px;
- line-height: 24px;
- letter-spacing: 0.03em;
- 
- 
- 
- 
- color: var(--gray);
+color: var(--gray);
  }
- 
-/*Пунктуальність*/
-.index_details_two{
-  width: 270px;
-
-margin-top: auto;
-margin-right: 30px;
-margin-bottom: 10px;
-margin-left: 30px;
-align-items: center;
-text-align: left;
 
 
-  font-weight: 700;
- font-size: 14px;
- line-height: 16px;
- letter-spacing: 0.03em;
- 
- text-transform: uppercase;
- color: var(--black);
-}
-
-.index_description_two{
-  width: 270px;
-
-margin-top: 10px;
-margin-right: 30px;
-margin-bottom: 24px;
-margin-left: 30px;
-align-items: center;
-text-align: left;
-
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  
-  
-  
-  
-  color: var(--gray);
-}
-
-/*Планування*/
-.index_details_three{
-  width: 270px;
-margin-top: auto;
-  margin-right: 30px;
-  margin-bottom: 10px;
-  margin-left: 30px;
-  align-items: center;
-text-align: left;
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  
-  text-transform: uppercase;
-  color: var(--black);
-}
-
-.index_description_three{
-  width: 270px;
-  margin-top: auto;
-  margin-right: 30px;
-  margin-bottom: 10px;
-  margin-left: 30px;
-  align-items: center;
-text-align: left;
-
-
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  
-  
-  
-  
-  color: var(--gray);
-}
-
-/*Сучасні технології*/
-.index_details_four{
-  width: 270px;
-  margin-top: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
-  margin-left: 30px;
-  align-items: center;
-text-align: left;
-
-
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  
-  text-transform: uppercase;
-  color: var(--black);
-}
-
-.index_description_four{
-  width: 270px;
-  margin-top: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
-  margin-left: 30px;
-  align-items: center;
-text-align: left;
-
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  
-  
-  
-  
-  color: var(--gray);
-}
 /*----------------------*/
 
 /*images*/
@@ -816,7 +582,7 @@ margin-bottom: 50px;
     gap: 30px;
   }
 
- .index_name_h3{
+ .team_name{
   margin-bottom: 10px;
   font-size: 16px;
 
@@ -825,125 +591,43 @@ margin-bottom: 50px;
 
 
 /*IGOR*/
- .index_backgound_white_igor{
+ .backgound_team{
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
     
   background: var(--white);
 }
 
-.index_name_igor{
-  padding: 10px;
-
- 
-  letter-spacing: 0.03em;
- 
-  font-weight: 500;
-font-size: 16px;
-line-height:1.18;
-text-align: center;
-color: var(--black);
-}
-
-.index_responsibilities_igor{
-  
-  letter-spacing: 0.03em;
- 
-  font-weight: 400;
-font-size: 16px;
-line-height: 1.18;
-text-align: center;
-
-color: var(--gray);
-}
-/*-----------------------------*/
-
-/*OLGA*/
-.index_backgound_white_olga{
-  
-  background: var(--white);
-}
-
-.index_name_olga{
-  padding: 10px;
-  letter-spacing: 0.03em;
- 
-  font-weight: 500;
-font-size: 16px;
-line-height:1.18;
-text-align: center;
-color: var(--black);
-}
-
-
-.index_responsibilities_olga{
-  
-  letter-spacing: 0.03em;
- 
-  font-weight: 400;
-font-size: 16px;
-line-height: 1.18;
-text-align: center;
-
-color: var(--gray);
-}
-/*----------------------------------------*/
-
-/*MIKOLA*/
-.index_backgound_white_mikola{
-  
-  background: var(--white);
-}
-
-
-.index_name_mikola{
-  padding: 10px;
-  letter-spacing: 0.03em;
- 
-  font-weight: 500;
-font-size: 16px;
-line-height:1.18;
-text-align: center;
-color: var(--black);
-}
-
-.index_responsibilities_mikola{
-
-letter-spacing: 0.03em;
- 
-font-weight: 400;
-font-size: 16px;
-line-height: 1.18;
-text-align: center;
-
-color: var(--gray);
-}
-/*-------------------------------------------*/
-
-/*MIHAYLO*/
-.index_backgound_white_mihaylo{
-  
-  background-color: var(--white);
-}
-
-.index_name_mihaylo{
-  padding: 10px;
+.div_team{
+ padding: 30px;
+ }
+ .team_name{
+  margin-bottom: 10px;
+  font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height:1.18;
-text-align: center;
-color: var(--black);
-}
+line-height: 19px;
 
-.index_responsibilities_mihaylo{
-  
-  letter-spacing: 0.03em;
- 
-  font-weight: 400;
-font-size: 16px;
-line-height: 1.18;
+
 text-align: center;
+letter-spacing: 0.03em;
+
+color: var(--black);
+ }
+
+ .team_responsibilitiesr{
+  font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+
+
+text-align: center;
+letter-spacing: 0.03em;
 
 color: var(--gray);
-}
+ }
+
  
 /*------------------------------------------*/
 
@@ -1004,12 +688,13 @@ color: var(--gray);
  
  
    .tell_about{
-     letter-spacing: 0.03em;
- 
-     font-weight: 400;
- 
-     font-size: 14px;
-     line-height:2;
+    font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+
+
+letter-spacing: 0.03em;;
      
      color: rgba(255, 255, 255, 0.6);
      }
@@ -1030,12 +715,13 @@ color: var(--gray);
      
       margin-bottom: 9px;
         
-         letter-spacing: 0.03em;
- 
-         font-weight: 400;
- 
-         font-size: 14px;
-         line-height:2;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
+     
+      
+      letter-spacing: 0.03em;
          
          color: var(--white);
          }
@@ -1051,12 +737,13 @@ color: var(--gray);
                   margin-bottom: 9px;
                   
 
-                  letter-spacing: 0.03em;
- 
+                  font-style: normal;
                   font-weight: 400;
-            
                   font-size: 14px;
-                  line-height: 2;
+                  line-height: 24px;
+                  
+                  
+                  letter-spacing: 0.03em;
                   
                   color: rgba(255, 255, 255, 0.6);
                 }
@@ -1077,7 +764,7 @@ color: var(--gray);
                 }
 
 
-                .index_footer_li{
+                .index_footer_li:not(last-child){
                   margin-bottom: 9px;
                 }
 /*Ховери*/
@@ -1092,37 +779,25 @@ color: var(--gray);
 
 
 
-.about_studi_index:hover, .about_studi_index:focus{
+.navigation:hover, .navigation:focus{
 border-color: var(--black);
 color: var(--blue);
 
 }
 
-.about_portfolio_index:hover, .about_portfolio_index:focus{
-border-color: var(--black);
-color: var(--blue);
 
-}
 
-.about_contact_index:hover, .about_contact_index:focus{
-border-color: var(--black);
-color: var(--blue);
-
-}
-
-.about_mail:hover, .about_mail:focus{
+.nav_mail_tel:hover, .nav_mail_tel:focus{
 border-color: var(--gray);
 color: var(--blue);
 
 }
 
-.about_tell:hover, .about_tell:focus {
-border-color: var(--gray);
-color: var(--blue);
 
-}
 
-.about_all:hover, .about_all:focus{
+
+
+.about_button:hover, .about_button:focus{
   
 border-color: var(--black);
 background-color: var(--blue) ;
@@ -1131,34 +806,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 
 
 }
-.about_web_site:hover, .about_web_site:focus{
-  border-color: var(--black);
-background-color: var(--blue) ;
-color: var(--white);
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
-}
-.about_applications:hover, .about_applications:focus{
-  border-color: var(--black);
-  background-color: var(--blue) ;
-  color: var(--white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  
-}
-.about_design:hover, .about_design:focus{
-  border-color: var(--black);
-  background-color: var(--blue) ;
-  color: var(--white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  
-}
-.about_marketing:hover, .about_marketing:focus{
-  border-color: var(--black);
-  background-color: var(--blue) ;
-  color: var(--white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  
-}
 
 
 
